# method_interview

./: README.md
backend/: .env.example  .env.localdev  .gitignore  Makefile  README.md  main.py  main_docs.py  models.py  pyproject.toml
backend/builders/: process.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: b390dea2ca74___init__migrations.py
backend/models/: __init__.py  account.py  address.py  bank_account.py  base.py  employee.py  entity.py  liability.py  payment.py
backend/routers/: process.py  users.py
backend/services/: method.py  process.py
backend/utils/: constants.py  formating.py  logging.py  routing.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/batches/: page.tsx
